--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "herbafil",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
+    "start": "node api/index.js",
+    "dev": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Herbafil API for herbal medicine application",
   "dependencies": {
-    "axios": "^1.8.3",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "mysql2": "^3.13.0",
-    "nodemailer": "^6.10.0"
+    "express": "^4.18.2",
+    "mysql2": "^3.6.5",
+    "nodemailer": "^6.10.0",
+    "vary": "^1.1.2",
+    "body-parser": "^1.20.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
